--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QREW // SYSTEM PORTAL</title>
+    <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDENA4hRA2T8hLJLu0TQuxKmD0m5JCAOho-A&s" type="image/x-icon">
+    
   </head>
 
   <body>
